--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 <div id='main' class="container">
     <nav class="navbar-fluid navbar-default navbar-fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#"> Bipper! </a>
+            <a class="navbar-brand" href="#/"> Bipper! </a>
             <p class="navbar-text"> Tiny App to showcase some of my MEAN stack knowledge</p>
             <p class="navbar-right navbar-text" ng-hide="authenticated"><a href="#/login">Login</a> or <a href="#/register">Register</a></p>
             <p class="navbar-right navbar-text" ng-show="authenticated"><a href="#/" ng-click="signout()">Logout</a></p>
